Added support for multiple starting points. it is less thread safe now. Changed Mob.move take a Tile instead of a Point. Added a second starting point to maps/hampton_court.txt Completely translated modified files.